# readability-metric

./: .gitignore  ??.tsv  EN.tsv  ENG.tsv  ENGLISH.tsv  En.tsv  English.tsv  Makefile  README.md  README.org  UND.tsv  analysis_moby_pinocchio.py  ar-SA.tsv  ar.tsv  arabic-corpus.sh  arg.py  benchmarks.json  canon-tagging.sh  chinese-corpus.sh  clean.sh  corpus-analysis.py  corpus_analysis.py  create_benchmark.py  de.tsv  download_benchmark.sh  empty.tsv  en-CA.tsv  en-GB.tsv  en-US.tsv  en-gb.tsv  en-us.tsv  en.tsv  en_GB.tsv  eng.tsv  es.tsv  flake.nix  fr-FR.tsv  fr.tsv  french.tsv  it.tsv  (+15 more)
.github/workflows/: pythonapp.yml
assets/: Quijote.epub  crusoe.epub  faust.epub  hongloumeng.epub  lesfleursdumal.epub  meditationes.epub  moby.epub  pinocchio.epub
db/: library.db  library_test.db
scripts/: download_benchmark.sh  french-corpus.sh
test/: arabic-corpus.sh  download_benchmark.sh
utils/: canon-tagging.sh  chinese-corpus.sh
