[tool.poetry]
name = "readability-metric"
version = "0.1.0"
description = ""
authors = ["Roland Coeurjoly <rolandcoeurjoly@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
nltk = "^3.6.6"
numpy = "^1.21.2"
pymongo = "^4.6.3"
EbookLib = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
