[project]
name = "readability-metric"
version = "0.2.0"
description = "Readability metrics for EPUB books"
authors = [
  { name = "Roland Coeurjoly", email = "rolandcoeurjoly@gmail.com" },
]
readme = { file = "README.org", content-type = "text/plain" }
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "EbookLib>=0.18",
  "langdetect>=1.0.9",
  "lxml>=5.0",
  "numpy>=1.26",
  "pymongo>=4.6",
  "scipy>=1.11",
]

[project.scripts]
readability-metric = "readability_metric:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["readability_metric", "corpus_analysis"]

[tool.ruff]
line-length = 100
